<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_menu_first"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_starred_courses"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/starred_courses" />
        <item
            android:id="@+id/nav_old_e3"
            android:icon="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:title="@string/old_e3" />
        <item
            android:id="@+id/nav_new_e3"
            android:icon="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:title="@string/new_e3" />
    </group>

    <group>
        <item
            android:id="@+id/nav_switch_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/switch_account" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/license" />
    </group>

</menu>
